--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">My Application Alo</string>
     <string name="home">Home</string>
     <string name="profile">Profile</string>
+    <string name="hello_blank_fragment">hello</string>
+    <string name="about"> Okta Pratama Nainggolan \n  Male \n 085261335804</string>
+    <string name="action_exit">Logout</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
